--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -17,7 +17,9 @@ resolution: 1024
 random_flip: true
 train_batch_size: 1
 num_train_epochs: 1
-checkpointing_steps: 500
+# checkpointing_steps: 500
+checkpointing_steps: 5
+
 learning_rate: 0.00003
 lr_scheduler: constant
 lr_warmup_steps: 0
@@ -28,8 +30,11 @@ output_dir: ./experiments
 train_data_dir: ./loop_images
 backup_data_dir_root: ./data # Your dataset backup folder
 # lora_ckpt_dir: checkpoint-1200
-max_train_steps: 500
+# max_train_steps: 500
+max_train_steps: 5
+
 num_of_generated_img: 6
+# num_of_generated_img: 128
 dmin_c: 3
 # dsize_c: 20    
 dsize_c: 3    
