--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -65,8 +65,8 @@ rank: 4
 train_text_encoder: false
 allow_tf32: false
 scale_lr: false
-use_8bit_adam: false 
-# use_8bit_adam: true #TODO cange to False
+# use_8bit_adam: false 
+use_8bit_adam: true #TODO cange to False
 
 text_inv: false # text_inv only
 lora: false     # lora
