--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -40,14 +40,16 @@ train_data_dir: ./loop_images
 backup_data_dir_root: ./data # Your dataset backup folder
 # lora_ckpt_dir: checkpoint-1200
 # max_train_steps: 500
-max_train_steps: 5
+max_train_steps: 1
 
-num_of_generated_img: 6
+num_of_generated_img: 2
 # num_of_generated_img: 128
-dmin_c: 3
+dmin_c: 1
 # dsize_c: 20    
-dsize_c: 3    
-infer_steps: 35
+dsize_c: 1    
+# infer_steps: 35
+infer_steps: 1
+
 adam_epsilon: 0.000000001
 adam_weight_decay: 0.0001
 adam_beta1: 0.9
@@ -74,5 +76,7 @@ center_crop: true
 dataloader_num_workers: 0
 noise_offset: 0
 max_grad_norm: 1.0
-num_validation_images: 4
+# num_validation_images: 4
+num_validation_images: 1
+
 validation_epochs: 1
