--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -13,8 +13,11 @@ pretrained_vae_model_name_or_path: madebyollin/sdxl-vae-fp16-fix
 # inference_prompt: RAW photo, a portrait photo of a shapely and sporty beautiful latina woman model with full lips and doube D bra size through cleavage in casual clothes, natural skin, 8k uhd, high quality, film grain, Fujifilm XT3
 
 # inference_prompt: ultra realistic , hyper detail, portrait photo of a shapely and sporty beautiful latina woman model with full lips and doube D bra size through cleavage in casual clothes, natural (imperfect skin:1.8), cinematic lighting, magic neon, dark red city, Canon EOS R3, nikon, f/1.4, ISO 200, 1/160s, 8K, RAW, unedited, symmetrical balance, in-frame, 8K
-inference_prompt: ultra realistic , hyper detail, shapely and full lips and doube D bra size, sporty beautiful latina woman model with cleavage, (imperfect skin:1.8), Canon EOS R3, nikon, f/1.4, ISO 200, 8K, RAW, unedited, symmetrical balance, in-frame, 8K
+# inference_prompt: ultra realistic , hyper detail, shapely and full lips and doube D bra size, sporty beautiful latina woman model with cleavage, (imperfect skin:1.8, blemishes, pores, texture), Canon EOS R3, nikon, f/1.4, ISO 200, 8K, RAW, unedited, symmetrical balance, in-frame, 8K
 # negative_prompt: (deformed iris, deformed pupils, semi-realistic, cgi, 3d, render, sketch, cartoon, drawing, anime:1.4), text, close up, cropped, out of frame, worst quality, low quality, jpeg artifacts, ugly, duplicate, morbid, mutilated, extra fingers, mutated hands, poorly drawn hands, poorly drawn face, mutation, deformed, blurry, dehydrated, bad anatomy, bad proportions, extra limbs, cloned face, disfigured, gross proportions, malformed limbs, missing arms, missing legs, extra arms, extra legs, fused fingers, too many fingers, long neck
+inference_prompt: ultra realistic , hyper detail, shapely and full lips and doube D bra size, sporty beautiful latina woman model, (imperfect skin:1.8, blemishes, pores, texture), Canon EOS R3, nikon, f/1.4, ISO 200, 8K, RAW, unedited, in-frame, 8K
+
+
 learnable_property: object
 initializer_token: cha
 placeholder_token: <$V$>
@@ -25,7 +28,7 @@ caption_column: text
 resolution: 1024
 random_flip: true
 train_batch_size: 1
-num_train_epochs: 1
+num_train_epochs: 2
 checkpointing_steps: 500
 # checkpointing_steps: 5
 
@@ -51,11 +54,15 @@ infer_steps: 35
 # infer_steps: 1
 
 adam_epsilon: 0.000000001
-adam_weight_decay: 0.0001
+# adam_weight_decay: 0.0001
+adam_weight_decay: 0.01
+
 adam_beta1: 0.9
 adam_beta2: 0.99
 max_loop: 1
-convergence_scale: 0.6 # 80% in the paper
+# convergence_scale: 0.6 # 80% in the paper
+convergence_scale: 0.8 
+
 
 # inherited from origin, no need to change
 gradient_accumulation_steps: 1
@@ -68,7 +75,6 @@ train_text_encoder: false
 allow_tf32: false
 scale_lr: false
 use_8bit_adam: false 
-# use_8bit_adam: true #TODO cange to False
 
 text_inv: false # text_inv only
 lora: false     # lora
