--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -46,21 +46,25 @@ max_train_steps: 500
 # max_train_steps: 1
 
 # num_of_generated_img: 6
-num_of_generated_img: 128
-dmin_c: 10
-dsize_c: 20    
+num_of_generated_img: 512
+dmin_c: 15
+# dmin_c: 10
+
+# dsize_c: 20    
+dsize_c: 30    
+
 # dsize_c: 3   
 infer_steps: 35
 # infer_steps: 1
 
 adam_epsilon: 0.000000001
-# adam_weight_decay: 0.0001
-adam_weight_decay: 0.01
+adam_weight_decay: 0.0001
+# adam_weight_decay: 0.01
 
 adam_beta1: 0.9
 adam_beta2: 0.99
-max_loop: 5
-convergence_scale: 0.5 # 80% in the paper
+max_loop: 10
+convergence_scale: 0.4 # 80% in the paper
 # convergence_scale: 0.8 
 
 
